# Aton

./: CMakeLists.txt  README.md
cmake/: FindNuke.cmake
scripts/: aton_c4d.pyp  aton_houdini.py  aton_maya.py  init.py  menu.py
src/: aton_client.cpp  aton_client.h  aton_driver_arnold.cpp  aton_fb_updater.h  aton_fb_writer.h  aton_framebuffer.cpp  aton_framebuffer.h  aton_node.cpp  aton_node.h  aton_operator_arnold.cpp  aton_server.cpp  aton_server.h
